# name_resolver

./: .dockerignore  .gitignore  Dockerfile  LICENCE.md  README.md  go.mod  go.sum  main.go  mypy.ini  setup.cfg
.github/workflows/: build.yml  publish.yml
cmd/: dns.go  root.go
pkg/resolver/: dns.go  docker.go  inspector.go
src/name_resolver/: logger.py  main.py  resolver.py
