[metadata]
name = Name resolver
version = 0.1.0
description = Small util to edit the hosts file when a docker container starts/stops
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = DNS Docker
author = "Nikita Vakula"
license = MIT
author_email = "programmistov.programmist@gmail.com"
url = "https://github.com/krjakbrjak/name-resolver"
python_requires = >= 3.8.*
classifiers =
    Operating System :: OS Independent
    Environment :: Console
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
install_requires =
    docker
    pydantic
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  name_resolver = name_resolver.main:entry
